--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -1,6 +1,8 @@
-.heading-secondary {
-  font-size: 2.5rem;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: $font-primary;
-  color: #fff;
-  letter-spacing: 0.1rem;
 }
